# libdeepstreamcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: connection.hpp  connection_event_handler.hpp  endpoint.hpp  log.hpp  mailbox.hpp
protocol/: CMakeLists.txt
src/: connection.cpp  connection_event_handler.cpp  endpoint.cpp  main.cpp
transport/: CMakeLists.txt
transport/src/: websocket.cpp
